fix: add responsiveness to the cart sidebar

--- a/proyecto/index.css
+++ b/proyecto/index.css
@@ -161,7 +161,7 @@ ul .cards-container {
 
     .nav {
         display: flex
-    };
+    }
 }
 
 @media (max-width: 575.98px) {
@@ -171,6 +171,10 @@ ul .cards-container {
 
     .nav {
         display: none
-    };
+    }
+
+    .cart-sidebar {
+      width: 100%;
+    }
 }
 
