--- a/proyecto/index.css
+++ b/proyecto/index.css
@@ -199,11 +199,15 @@ ul .cards-container {
   border-radius: 8px;
   position: relative;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .modal-image {
   width: 100px;
   height: auto;
+  margin-top: 1rem;
   margin-bottom: 1rem;
 }
 
